--- a/UI/HTML/index.html
+++ b/UI/HTML/index.html
@@ -6,7 +6,7 @@
         <script src="../SCRIPTS/main.js"></script>
         
     </head>
-    <body onload="onloadFunc()">
+    <body onload="onloadFunc()" style="overflow:scroll; height:100%;">
         <div class="headerContainer">
             <img src="../ASSETS/banner.png" class="bannerImg"></div>
         </div>
